[package]
name = "prism-cartographer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prism-cartographer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "process"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
cron = "0.16"
chrono = "0.4"
image = "0.25"
fast_image_resize = { version = "6", features = ["image"] }
tiny-skia = "0.12.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "blocking"] }
flate2 = "1"
log = "0.4"
env_logger = "0.11"
