[package]
name = "prism"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Upstream: BitCraft cacheless bindings (includes fork of spacetimedb_sdk 1.x, so we separately import relay_sdk below).
upstream_bindings = { package = "bindings", git = "https://github.com/BitCraftToolBox/cacheless-rust-bindings", branch = "main" }

# Downstream: generated client bindings for our relay module (uses standard SDK 2.x).
relay_bindings = { path = "../relay-bindings" }
# Standard SDK 2.x re-exported for trait imports (DbContext) used by relay connection.
relay_sdk = { package = "spacetimedb-sdk", version = "2.4.0" }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
mimalloc = "0.1"
serde_json = "1.0"
cron = "0.16.0"
chrono = "0.4"
toml = "1.1.2"
hashbrown = "0.17.1"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.11"

# History sink.
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "macros", "migrate"] }
