[package]
name = "prism-relay-module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.4.0", features = ["unstable"] }
url = "2.5.8"
serde_json = "1.0.150"

# Standalone workspace so it can be published / versioned independently.
[workspace]
